bootstrap/argo-cd/patches/argocd-dep-ksops.yaml
#! Derived from https://github.com/viaduct-ai/kustomize-sops#ksops-repo-sever-patch
#! Copy the ksops binary into the argocd-repo-server container, thereby making it usable in a kustomize pipeline
#! Attention! A similar but outdated approach using ksops.so is on https://hub.docker.com/r/viaductoss/ksops
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      # 1. Define an emptyDir volume which will hold the custom binaries
      volumes:
        - name: custom-tools
          emptyDir: {}
      # 2. Use an init container to download/copy custom binaries into the emptyDir
      containers:
        - name: argocd-repo-server
          volumeMounts:
            #! Do not overlay original kustomize
            #- mountPath: /usr/local/bin/kustomize
            #  name: custom-tools
            #  subPath: kustomize
            - mountPath: /usr/local/bin/ksops
              name: custom-tools
              subPath: ksops
            - mountPath: /usr/local/bin/curl
              name: custom-tools
              subPath: curl
        ## If you use AWS or GCP KMS, don't forget to include the necessary credentials to decrypt the secrets!
        #  - name: AWS_ACCESS_KEY_ID
        #    valueFrom:
        #      secretKeyRef:
        #        name: argocd-aws-credentials
        #        key: accesskey
        #  - name: AWS_SECRET_ACCESS_KEY
        #    valueFrom:
        #      secretKeyRef:
        #        name: argocd-aws-credentials
        #        key: secretkey
