bootstrap/argo-cd/patches/argocd-dep-revision-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignored-by-selector
spec:
  revisionHistoryLimit: 2
