bootstrap/argo-cd/patches/argocd-dep-sa.yaml
#! Enable mounting of the SA token. This is required so kustomize can authenticate towards vault using the kubernetes auth method
#! Disabled because unknown token lifetime. Creating explicitly instead, see below
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      automountServiceAccountToken: true
