bootstrap/argo-cd/patches/argocd-dep-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        #! Add a vault container for debugging. TODO: remove
        - name: vault-cli
          image: hashicorp/vault:1.19.3
          command: ["sleep", "infinity"]
        - name: vault-token-generator
          image: hashicorp/vault:1.19.3
          volumeMounts:
            - name: custom-tools
              mountPath: /custom-tools
          command:
            - sh
            - -c
            - |
              set -x
              set -eu
              while true ; do
                date
                ls -la /
                ls -la /custom-tools
                echo "Regenerating vault token"
                TOKEN=$(vault write -field=token auth/kubernetes-l5ug/login role=ksops-role jwt="$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)")
                echo "$TOKEN" > /custom-tools/.vault-token
                sleep 2700
              done
        - name: argocd-repo-server
          #! Set some env-vars to enable vault access
          #! These are no longer required because of vault-auth init container
          #env:
          #  - name: VAULT_ADDR
          #    value: "https://vault.heldenzeit.net"
          #  - name: VAULT_AUTH_METHOD
          #    value: "kubernetes"
          #  - name: VAULT_ROLE
          #    value: "ksops-role"
          volumeMounts:
            - name: custom-tools
              mountPath: /home/argocd/.vault-token
              subPath: .vault-token
